--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
-  "name": "telegram_api_test",
-  "version": "1.0.0",
-  "description": "",
-  "main": "bot.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/muhammadyunusuz/telegram_spammer.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/muhammadyunusuz/telegram_spammer/issues"
-  },
-  "homepage": "https://github.com/muhammadyunusuz/telegram_spammer#readme",
-  "dependencies": {
-    "input": "^1.0.1",
-    "telegram": "^2.4.6"
-  }
+	"name": "telegram_api_test",
+	"version": "1.0.0",
+	"description": "",
+	"main": "bot.js",
+	"scripts": {
+		"start": "node ./bot.js",
+		"dev": "nodemon ./bot.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/muhammadyunusuz/telegram_spammer.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/muhammadyunusuz/telegram_spammer/issues"
+	},
+	"homepage": "https://github.com/muhammadyunusuz/telegram_spammer#readme",
+	"dependencies": {
+		"dotenv": "^14.3.2",
+		"input": "^1.0.1",
+		"node-telegram-bot-api": "^0.56.0",
+		"pg": "^8.7.1",
+		"pg-hstore": "^2.3.4",
+		"sequelize": "^6.15.0",
+		"telegram": "^2.4.6"
+	}
 }
