--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
 	},
 	"homepage": "https://github.com/muhammadyunusuz/telegram_spammer#readme",
 	"dependencies": {
+		"axios": "^0.25.0",
 		"dotenv": "^14.3.2",
 		"input": "^1.0.1",
+		"node-fetch": "^3.2.0",
 		"node-telegram-bot-api": "^0.56.0",
 		"pg": "^8.7.1",
 		"pg-hstore": "^2.3.4",
