--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"homepage": "https://github.com/muhammadyunusuz/telegram_spammer#readme",
 	"dependencies": {
+		"@mtproto/core": "6.1.1",
 		"axios": "^0.25.0",
 		"dotenv": "^14.3.2",
 		"input": "^1.0.1",
